--- a/back-cogna-cadastro-cliente/docker-compose.yaml
+++ b/back-cogna-cadastro-cliente/docker-compose.yaml
@@ -4,8 +4,14 @@ services:
 
   db:
     image: postgres
+    restart: always
     environment:
       POSTGRES_PASSWORD: admim
-      POSTGRES_DB: cogna_client
     ports:
-      - '5433:5433'
+      - '5432:5432'
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
