--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
+    "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "latest",
+    "@mui/x-data-grid": "^6.12.1",
     "next": "13.x",
     "react": "18.x",
     "react-dom": "18.x",
