--- a/front/package.json
+++ b/front/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@emotion/cache": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "latest",
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "latest",
     "@mui/x-data-grid": "^6.12.1",
+    "@mui/x-date-pickers": "^6.12.1",
+    "dayjs": "^1.11.9",
     "next": "13.x",
     "react": "18.x",
     "react-dom": "18.x",
